k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pot-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pot
  template:
    metadata:
      labels:
        app: pot
    spec:
      containers:
        - image: tomssojer/pot:2023-01-08-12-46-29
          name: pot
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3

---

apiVersion: v1
kind: Service
metadata:
  name: pot
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: pot
